# starnavi_social_network

./: .dockerignore  .editorconfig  .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
automated_bot/: .env.sample  run.py  schemas.py  settings.py
automated_bot/clients/: automated_bot_api_client.py  automated_bot_client.py  base_http_client.py
automated_bot/utils/: bot_interface.py  exceptions.py  logging.py  pickle_Interface.py
core/: logging.py  middlewares.py  settings.py  urls.py
posts/: admin.py  models.py  serializers.py  swagger_schemas.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_like_unique_together.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_last_request.py
