[tool.poetry]
name = "starnavi-social-network"
version = "0.1.0"
description = ""
authors = ["Stanislav Buldyhin <stanislav.buldyhin@geo-pay.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
